--- a/index.html
+++ b/index.html
@@ -114,6 +114,121 @@
       <p class="fineprint">By purchasing, you agree to the terms in the Silent Equity Business Agreement. Clients own final delivered videos. Silent Equity retains internal systems and prompt IP.</p>
     </div>
   </section>
+<section
+  id="crm"
+  className="w-full bg-black text-white py-20 px-4 md:px-8 lg:px-16 border-t border-white/10"
+>
+  <div className="max-w-6xl mx-auto">
+    <p className="text-sm uppercase tracking-[0.2em] text-purple-400 mb-2">
+      Silent Equity | AI CRM Systems
+    </p>
+    <h2 className="text-3xl md:text-4xl font-semibold mb-4">
+      AI-Powered CRM & Automation Engine
+    </h2>
+    <p className="text-sm md:text-base text-gray-300 max-w-2xl mb-10">
+      For founders and organizations who are ready to stop duct-taping tools together
+      and build a real automation engine. Choose your level of infrastructure below.
+    </p>
+
+    <div className="grid gap-6 md:grid-cols-3">
+      {/* SilentStart CRM Engine */}
+      <div className="border border-white/10 rounded-2xl p-6 bg-white/5 backdrop-blur-sm flex flex-col justify-between">
+        <div>
+          <h3 className="text-xl font-semibold mb-1">SilentStart CRM Engine</h3>
+          <p className="text-xs uppercase tracking-[0.18em] text-gray-400 mb-3">
+            Foundation CRM System
+          </p>
+          <p className="text-sm text-gray-300 mb-4">
+            Core CRM setup for leads, clients, and operations. Perfect for businesses
+            that need to get organized, automated, and out of spreadsheets.
+          </p>
+          <ul className="text-xs text-gray-300 space-y-1.5 mb-6">
+            <li>• Custom CRM dashboard & pipelines</li>
+            <li>• Contact & lead management</li>
+            <li>• Calendar & booking workflows</li>
+            <li>• Email/SMS communication hub</li>
+            <li>• Basic AI receptionist agent</li>
+          </ul>
+        </div>
+        <div>
+          <p className="text-lg font-semibold mb-3">$3,500 one-time</p>
+          <a
+            href="https://buy.stripe.com/6oU4gz8by2rldWJ5nS18c04"
+            target="_blank"
+            rel="noopener noreferrer"
+            className="inline-flex w-full items-center justify-center rounded-lg border border-purple-500 bg-purple-600/90 px-4 py-2.5 text-sm font-medium hover:bg-purple-500 transition"
+          >
+            Get SilentStart CRM Engine
+          </a>
+        </div>
+      </div>
+
+      {/* SilentScale Automation System */}
+      <div className="border border-purple-500/60 rounded-2xl p-6 bg-gradient-to-b from-purple-900/40 via-black to-black flex flex-col justify-between shadow-[0_0_25px_rgba(168,85,247,0.35)]">
+        <div>
+          <h3 className="text-xl font-semibold mb-1">SilentScale Automation System</h3>
+          <p className="text-xs uppercase tracking-[0.18em] text-purple-300 mb-3">
+            Most Popular · CRM + Automation
+          </p>
+          <p className="text-sm text-gray-200 mb-4">
+            Full CRM + automation layer. Turn your existing SOPs into workflows that run
+            24/7 and eliminate manual follow-ups, onboarding, and repetitive admin.
+          </p>
+          <ul className="text-xs text-gray-200 space-y-1.5 mb-6">
+            <li>• Everything in SilentStart</li>
+            <li>• Multi-step automations from SOPs</li>
+            <li>• Email & text marketing sequences</li>
+            <li>• Automated client onboarding journeys</li>
+            <li>• Upgraded AI receptionist with logic flows</li>
+          </ul>
+        </div>
+        <div>
+          <p className="text-lg font-semibold mb-3">$7,500 one-time</p>
+          <a
+            href="https://buy.stripe.com/9B6aEX77u8PJg4R03y18c05"
+            target="_blank"
+            rel="noopener noreferrer"
+            className="inline-flex w-full items-center justify-center rounded-lg border border-purple-400 bg-purple-500 px-4 py-2.5 text-sm font-medium hover:bg-purple-400/90 transition"
+          >
+            Get SilentScale Automation System
+          </a>
+        </div>
+      </div>
+
+      {/* SilentEmpire AI Infrastructure */}
+      <div className="border border-white/10 rounded-2xl p-6 bg-white/5 backdrop-blur-sm flex flex-col justify-between">
+        <div>
+          <h3 className="text-xl font-semibold mb-1">SilentEmpire AI Infrastructure</h3>
+          <p className="text-xs uppercase tracking-[0.18em] text-gray-400 mb-3">
+            Full AI Infrastructure
+          </p>
+          <p className="text-sm text-gray-300 mb-4">
+            End-to-end AI infrastructure for teams that want their own private “software
+            stack” instead of paying for 5–10 different platforms every month.
+          </p>
+          <ul className="text-xs text-gray-300 space-y-1.5 mb-6">
+            <li>• Everything in SilentStart + SilentScale</li>
+            <li>• AI-powered client journey engine</li>
+            <li>• AI receptionist + lead qualifier</li>
+            <li>• Social & content automation workflows</li>
+            <li>• Internal AI assistant for the team</li>
+          </ul>
+        </div>
+        <div>
+          <p className="text-lg font-semibold mb-3">$15,000 one-time</p>
+          <a
+            href="https://buy.stripe.com/aFa8wP0J64zt2e16rW18c06"
+            target="_blank"
+            rel="noopener noreferrer"
+            className="inline-flex w-full items-center justify-center rounded-lg border border-gray-400 bg-transparent px-4 py-2.5 text-sm font-medium hover:bg-white/10 transition"
+          >
+            Get SilentEmpire AI Infrastructure
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
   <section id="system" class="system">
     <div class="wrap grid">
