--- a/index.html
+++ b/index.html
@@ -114,121 +114,126 @@
       <p class="fineprint">By purchasing, you agree to the terms in the Silent Equity Business Agreement. Clients own final delivered videos. Silent Equity retains internal systems and prompt IP.</p>
     </div>
   </section>
+
+
+  {/* ==== CRM SYSTEM PACKAGES ==== */}
 <section
   id="crm"
-  className="w-full bg-black text-white py-20 px-4 md:px-8 lg:px-16 border-t border-white/10"
+  className="w-full bg-[#050816] py-24 px-4 md:px-8 lg:px-16"
 >
-  <div className="max-w-6xl mx-auto">
-    <p className="text-sm uppercase tracking-[0.2em] text-purple-400 mb-2">
-      Silent Equity | AI CRM Systems
-    </p>
-    <h2 className="text-3xl md:text-4xl font-semibold mb-4">
-      AI-Powered CRM & Automation Engine
+  <div className="max-w-6xl mx-auto text-center mb-12">
+    <h2 className="text-3xl md:text-4xl font-semibold text-white">
+      CRM & Automation Systems
     </h2>
-    <p className="text-sm md:text-base text-gray-300 max-w-2xl mb-10">
-      For founders and organizations who are ready to stop duct-taping tools together
-      and build a real automation engine. Choose your level of infrastructure below.
+    <p className="text-sm md:text-base text-slate-300 mt-3">
+      Pick the automation engine that matches your operations. 
+      Upgrade anytime as your business scale increases.
     </p>
+  </div>
 
-    <div className="grid gap-6 md:grid-cols-3">
-      {/* SilentStart CRM Engine */}
-      <div className="border border-white/10 rounded-2xl p-6 bg-white/5 backdrop-blur-sm flex flex-col justify-between">
-        <div>
-          <h3 className="text-xl font-semibold mb-1">SilentStart CRM Engine</h3>
-          <p className="text-xs uppercase tracking-[0.18em] text-gray-400 mb-3">
-            Foundation CRM System
-          </p>
-          <p className="text-sm text-gray-300 mb-4">
-            Core CRM setup for leads, clients, and operations. Perfect for businesses
-            that need to get organized, automated, and out of spreadsheets.
-          </p>
-          <ul className="text-xs text-gray-300 space-y-1.5 mb-6">
-            <li>• Custom CRM dashboard & pipelines</li>
-            <li>• Contact & lead management</li>
-            <li>• Calendar & booking workflows</li>
-            <li>• Email/SMS communication hub</li>
-            <li>• Basic AI receptionist agent</li>
-          </ul>
+  <div className="max-w-6xl mx-auto grid gap-8 md:grid-cols-3">
+    {/* SilentStart CRM Engine */}
+    <div className="bg-[#020617] border border-slate-700 rounded-3xl p-8 flex flex-col justify-between">
+      <div>
+        <div className="flex items-baseline justify-between mb-4">
+          <h3 className="text-lg font-semibold text-white">
+            SilentStart CRM Engine
+          </h3>
+          <div className="text-right">
+            <p className="text-xl font-semibold text-white">$3,500</p>
+            <p className="text-xs text-slate-400">one-time build</p>
+          </div>
         </div>
-        <div>
-          <p className="text-lg font-semibold mb-3">$3,500 one-time</p>
-          <a
-            href="https://buy.stripe.com/6oU4gz8by2rldWJ5nS18c04"
-            target="_blank"
-            rel="noopener noreferrer"
-            className="inline-flex w-full items-center justify-center rounded-lg border border-purple-500 bg-purple-600/90 px-4 py-2.5 text-sm font-medium hover:bg-purple-500 transition"
-          >
-            Get SilentStart CRM Engine
-          </a>
-        </div>
+        <p className="text-sm text-slate-300 mb-4 text-left">
+          Foundation CRM to get you out of spreadsheets and into a clean system
+          for managing leads, clients, and operations.
+        </p>
+        <ul className="text-sm text-slate-300 space-y-1.5 text-left">
+          <li>• Custom CRM dashboard & pipelines</li>
+          <li>• Lead & client management</li>
+          <li>• Calendar and booking workflows</li>
+          <li>• Central inbox for email/SMS</li>
+          <li>• Starter AI receptionist agent</li>
+        </ul>
       </div>
 
-      {/* SilentScale Automation System */}
-      <div className="border border-purple-500/60 rounded-2xl p-6 bg-gradient-to-b from-purple-900/40 via-black to-black flex flex-col justify-between shadow-[0_0_25px_rgba(168,85,247,0.35)]">
-        <div>
-          <h3 className="text-xl font-semibold mb-1">SilentScale Automation System</h3>
-          <p className="text-xs uppercase tracking-[0.18em] text-purple-300 mb-3">
-            Most Popular · CRM + Automation
-          </p>
-          <p className="text-sm text-gray-200 mb-4">
-            Full CRM + automation layer. Turn your existing SOPs into workflows that run
-            24/7 and eliminate manual follow-ups, onboarding, and repetitive admin.
-          </p>
-          <ul className="text-xs text-gray-200 space-y-1.5 mb-6">
-            <li>• Everything in SilentStart</li>
-            <li>• Multi-step automations from SOPs</li>
-            <li>• Email & text marketing sequences</li>
-            <li>• Automated client onboarding journeys</li>
-            <li>• Upgraded AI receptionist with logic flows</li>
-          </ul>
+      <button
+        className="mt-8 w-full rounded-full bg-[#54a3ff] hover:bg-[#3b8ef0] text-[#020617] text-sm font-semibold py-3 transition"
+        onClick={() => window.open("https://buy.stripe.com/6oU4gz8by2rldWJ5nS18c04", "_blank")}
+      >
+        Select SilentStart — $3,500
+      </button>
+    </div>
+
+    {/* SilentScale Automation System (highlighted like your “Standard” card) */}
+    <div className="bg-[#020617] border border-[#54a3ff] rounded-3xl p-8 flex flex-col justify-between shadow-[0_0_40px_rgba(84,163,255,0.25)]">
+      <div>
+        <div className="flex items-baseline justify-between mb-4">
+          <h3 className="text-lg font-semibold text-white">
+            SilentScale Automation System
+          </h3>
+          <div className="text-right">
+            <p className="text-xl font-semibold text-white">$7,500</p>
+            <p className="text-xs text-slate-400">one-time build</p>
+          </div>
         </div>
-        <div>
-          <p className="text-lg font-semibold mb-3">$7,500 one-time</p>
-          <a
-            href="https://buy.stripe.com/9B6aEX77u8PJg4R03y18c05"
-            target="_blank"
-            rel="noopener noreferrer"
-            className="inline-flex w-full items-center justify-center rounded-lg border border-purple-400 bg-purple-500 px-4 py-2.5 text-sm font-medium hover:bg-purple-400/90 transition"
-          >
-            Get SilentScale Automation System
-          </a>
-        </div>
+        <p className="text-sm text-slate-200 mb-4 text-left">
+          Full CRM plus automation built directly from your SOPs so follow-ups,
+          onboarding, and client journeys run 24/7.
+        </p>
+        <ul className="text-sm text-slate-200 space-y-1.5 text-left">
+          <li>• Everything in SilentStart</li>
+          <li>• Multi-step automations from your SOPs</li>
+          <li>• Email + SMS journeys for prospects & clients</li>
+          <li>• Automated onboarding & offboarding flows</li>
+          <li>• Upgraded AI receptionist with routing logic</li>
+        </ul>
       </div>
 
-      {/* SilentEmpire AI Infrastructure */}
-      <div className="border border-white/10 rounded-2xl p-6 bg-white/5 backdrop-blur-sm flex flex-col justify-between">
-        <div>
-          <h3 className="text-xl font-semibold mb-1">SilentEmpire AI Infrastructure</h3>
-          <p className="text-xs uppercase tracking-[0.18em] text-gray-400 mb-3">
-            Full AI Infrastructure
-          </p>
-          <p className="text-sm text-gray-300 mb-4">
-            End-to-end AI infrastructure for teams that want their own private “software
-            stack” instead of paying for 5–10 different platforms every month.
-          </p>
-          <ul className="text-xs text-gray-300 space-y-1.5 mb-6">
-            <li>• Everything in SilentStart + SilentScale</li>
-            <li>• AI-powered client journey engine</li>
-            <li>• AI receptionist + lead qualifier</li>
-            <li>• Social & content automation workflows</li>
-            <li>• Internal AI assistant for the team</li>
-          </ul>
+      <button
+        className="mt-8 w-full rounded-full bg-[#54a3ff] hover:bg-[#3b8ef0] text-[#020617] text-sm font-semibold py-3 transition"
+        onClick={() => window.open("https://buy.stripe.com/9B6aEX77u8PJg4R03y18c05", "_blank")}
+      >
+        Select SilentScale — $7,500
+      </button>
+    </div>
+
+    {/* SilentEmpire AI Infrastructure */}
+    <div className="bg-[#020617] border border-slate-700 rounded-3xl p-8 flex flex-col justify-between">
+      <div>
+        <div className="flex items-baseline justify-between mb-4">
+          <h3 className="text-lg font-semibold text-white">
+            SilentEmpire AI Infrastructure
+          </h3>
+          <div className="text-right">
+            <p className="text-xl font-semibold text-white">$15,000</p>
+            <p className="text-xs text-slate-400">one-time build</p>
+          </div>
         </div>
-        <div>
-          <p className="text-lg font-semibold mb-3">$15,000 one-time</p>
-          <a
-            href="https://buy.stripe.com/aFa8wP0J64zt2e16rW18c06"
-            target="_blank"
-            rel="noopener noreferrer"
-            className="inline-flex w-full items-center justify-center rounded-lg border border-gray-400 bg-transparent px-4 py-2.5 text-sm font-medium hover:bg-white/10 transition"
-          >
-            Get SilentEmpire AI Infrastructure
-          </a>
-        </div>
+        <p className="text-sm text-slate-300 mb-4 text-left">
+          Your private AI & automation stack: CRM, marketing engine, AI
+          receptionist, and internal assistants all working together.
+        </p>
+        <ul className="text-sm text-slate-300 space-y-1.5 text-left">
+          <li>• Everything in SilentStart & SilentScale</li>
+          <li>• AI-driven client journey orchestration</li>
+          <li>• AI receptionist + lead qualification flows</li>
+          <li>• Social & nurture automation integrations</li>
+          <li>• Internal AI assistant for your team</li>
+        </ul>
       </div>
+
+      <button
+        className="mt-8 w-full rounded-full bg-[#54a3ff] hover:bg-[#3b8ef0] text-[#020617] text-sm font-semibold py-3 transition"
+        onClick={() => window.open("https://buy.stripe.com/aFa8wP0J64zt2e16rW18c06", "_blank")}
+      >
+        Select SilentEmpire — $15,000
+      </button>
     </div>
   </div>
 </section>
+
+           
 
   <section id="system" class="system">
     <div class="wrap grid">
