--- a/index.html
+++ b/index.html
@@ -114,124 +114,88 @@
       <p class="fineprint">By purchasing, you agree to the terms in the Silent Equity Business Agreement. Clients own final delivered videos. Silent Equity retains internal systems and prompt IP.</p>
     </div>
   </section>
+  <section id="crm" class="packages">
+    <div class="wrap">
+      <h2 class="center">CRM &amp; Automation Systems</h2>
+      <p class="muted center">Pick the automation engine that matches your operations. Upgrade anytime.</p>
 
-
-  {/* ==== CRM SYSTEM PACKAGES ==== */}
-<section
-  id="crm"
-  className="w-full bg-[#050816] py-24 px-4 md:px-8 lg:px-16"
->
-  <div className="max-w-6xl mx-auto text-center mb-12">
-    <h2 className="text-3xl md:text-4xl font-semibold text-white">
-      CRM & Automation Systems
-    </h2>
-    <p className="text-sm md:text-base text-slate-300 mt-3">
-      Pick the automation engine that matches your operations. 
-      Upgrade anytime as your business scale increases.
-    </p>
-  </div>
-
-  <div className="max-w-6xl mx-auto grid gap-8 md:grid-cols-3">
-    {/* SilentStart CRM Engine */}
-    <div className="bg-[#020617] border border-slate-700 rounded-3xl p-8 flex flex-col justify-between">
-      <div>
-        <div className="flex items-baseline justify-between mb-4">
-          <h3 className="text-lg font-semibold text-white">
-            SilentStart CRM Engine
-          </h3>
-          <div className="text-right">
-            <p className="text-xl font-semibold text-white">$3,500</p>
-            <p className="text-xs text-slate-400">one-time build</p>
+      <div class="cards">
+        <!-- SilentStart CRM Engine -->
+        <div class="card">
+          <div class="row space">
+            <h3>SilentStart CRM Engine</h3>
+            <div class="price">$3,500</div>
           </div>
+          <p class="muted">Foundation CRM to get you out of spreadsheets and into a clean, trackable system.</p>
+          <ul class="ticks">
+            <li>Custom CRM dashboard &amp; pipelines</li>
+            <li>Lead &amp; client management</li>
+            <li>Calendar + booking workflows</li>
+            <li>Central inbox for email/SMS</li>
+            <li>Starter AI receptionist agent</li>
+          </ul>
+          <a
+            class="btn primary block"
+            target="_blank"
+            href="https://buy.stripe.com/6oU4gz8by2rldWJ5nS18c04"
+          >
+            Select SilentStart — $3,500
+          </a>
         </div>
-        <p className="text-sm text-slate-300 mb-4 text-left">
-          Foundation CRM to get you out of spreadsheets and into a clean system
-          for managing leads, clients, and operations.
-        </p>
-        <ul className="text-sm text-slate-300 space-y-1.5 text-left">
-          <li>• Custom CRM dashboard & pipelines</li>
-          <li>• Lead & client management</li>
-          <li>• Calendar and booking workflows</li>
-          <li>• Central inbox for email/SMS</li>
-          <li>• Starter AI receptionist agent</li>
-        </ul>
+
+        <!-- SilentScale Automation System (featured like Standard) -->
+        <div class="card featured">
+          <div class="row space">
+            <h3>SilentScale Automation System</h3>
+            <div class="price">$7,500</div>
+          </div>
+          <p class="muted">Full CRM plus automation built directly from your SOPs so client journeys run 24/7.</p>
+          <ul class="ticks">
+            <li>Everything in SilentStart</li>
+            <li>Multi-step automations from your SOPs</li>
+            <li>Email + SMS nurture journeys</li>
+            <li>Automated onboarding &amp; offboarding</li>
+            <li>Upgraded AI receptionist with routing</li>
+          </ul>
+          <a
+            class="btn primary block"
+            target="_blank"
+            href="https://buy.stripe.com/9B6aEX77u8PJg4R03y18c05"
+          >
+            Select SilentScale — $7,500
+          </a>
+        </div>
+
+        <!-- SilentEmpire AI Infrastructure -->
+        <div class="card">
+          <div class="row space">
+            <h3>SilentEmpire AI Infrastructure</h3>
+            <div class="price">$15,000</div>
+          </div>
+          <p class="muted">Your full AI &amp; automation stack: CRM, marketing engine, and internal assistants.</p>
+          <ul class="ticks">
+            <li>Everything in SilentStart &amp; SilentScale</li>
+            <li>AI-driven client journey orchestration</li>
+            <li>AI receptionist + lead qualification</li>
+            <li>Social &amp; nurture automation integrations</li>
+            <li>Internal AI assistant for your team</li>
+          </ul>
+          <a
+            class="btn primary block"
+            target="_blank"
+            href="https://buy.stripe.com/aFa8wP0J64zt2e16rW18c06"
+          >
+            Select SilentEmpire — $15,000
+          </a>
+        </div>
       </div>
 
-      <button
-        className="mt-8 w-full rounded-full bg-[#54a3ff] hover:bg-[#3b8ef0] text-[#020617] text-sm font-semibold py-3 transition"
-        onClick={() => window.open("https://buy.stripe.com/6oU4gz8by2rldWJ5nS18c04", "_blank")}
-      >
-        Select SilentStart — $3,500
-      </button>
+      <p class="fineprint">
+        By purchasing, you agree to the terms in the Silent Equity Business Agreement.
+        Systems are customized for your operations. Silent Equity retains internal engine &amp; prompt IP.
+      </p>
     </div>
-
-    {/* SilentScale Automation System (highlighted like your “Standard” card) */}
-    <div className="bg-[#020617] border border-[#54a3ff] rounded-3xl p-8 flex flex-col justify-between shadow-[0_0_40px_rgba(84,163,255,0.25)]">
-      <div>
-        <div className="flex items-baseline justify-between mb-4">
-          <h3 className="text-lg font-semibold text-white">
-            SilentScale Automation System
-          </h3>
-          <div className="text-right">
-            <p className="text-xl font-semibold text-white">$7,500</p>
-            <p className="text-xs text-slate-400">one-time build</p>
-          </div>
-        </div>
-        <p className="text-sm text-slate-200 mb-4 text-left">
-          Full CRM plus automation built directly from your SOPs so follow-ups,
-          onboarding, and client journeys run 24/7.
-        </p>
-        <ul className="text-sm text-slate-200 space-y-1.5 text-left">
-          <li>• Everything in SilentStart</li>
-          <li>• Multi-step automations from your SOPs</li>
-          <li>• Email + SMS journeys for prospects & clients</li>
-          <li>• Automated onboarding & offboarding flows</li>
-          <li>• Upgraded AI receptionist with routing logic</li>
-        </ul>
-      </div>
-
-      <button
-        className="mt-8 w-full rounded-full bg-[#54a3ff] hover:bg-[#3b8ef0] text-[#020617] text-sm font-semibold py-3 transition"
-        onClick={() => window.open("https://buy.stripe.com/9B6aEX77u8PJg4R03y18c05", "_blank")}
-      >
-        Select SilentScale — $7,500
-      </button>
-    </div>
-
-    {/* SilentEmpire AI Infrastructure */}
-    <div className="bg-[#020617] border border-slate-700 rounded-3xl p-8 flex flex-col justify-between">
-      <div>
-        <div className="flex items-baseline justify-between mb-4">
-          <h3 className="text-lg font-semibold text-white">
-            SilentEmpire AI Infrastructure
-          </h3>
-          <div className="text-right">
-            <p className="text-xl font-semibold text-white">$15,000</p>
-            <p className="text-xs text-slate-400">one-time build</p>
-          </div>
-        </div>
-        <p className="text-sm text-slate-300 mb-4 text-left">
-          Your private AI & automation stack: CRM, marketing engine, AI
-          receptionist, and internal assistants all working together.
-        </p>
-        <ul className="text-sm text-slate-300 space-y-1.5 text-left">
-          <li>• Everything in SilentStart & SilentScale</li>
-          <li>• AI-driven client journey orchestration</li>
-          <li>• AI receptionist + lead qualification flows</li>
-          <li>• Social & nurture automation integrations</li>
-          <li>• Internal AI assistant for your team</li>
-        </ul>
-      </div>
-
-      <button
-        className="mt-8 w-full rounded-full bg-[#54a3ff] hover:bg-[#3b8ef0] text-[#020617] text-sm font-semibold py-3 transition"
-        onClick={() => window.open("https://buy.stripe.com/aFa8wP0J64zt2e16rW18c06", "_blank")}
-      >
-        Select SilentEmpire — $15,000
-      </button>
-    </div>
-  </div>
-</section>
+  </section>
 
            
 
