--- a/index.html
+++ b/index.html
@@ -4,44 +4,47 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Silent Equity — Where AI Meets Automation</title>
-  <meta name="description" content="Silent Equity builds cinematic AI universes, automation systems, and viral script tools for creators and brands.">
+  <meta name="description" content="Silent Equity designs AI-powered CRM, automation systems, and client portals for coaches, creators, and agencies.">
   <link rel="icon" href="assets/logo.png">
   <link rel="stylesheet" href="site.css">
 </head>
 <body>
   <header class="nav">
     <div class="wrap row">
-      <div class="brand">
+      <a href="#top" class="brand">
         <img src="assets/logo.png" alt="Silent Equity logo" class="logo">
         <span>Silent Equity</span>
-      </div>
+      </a>
       <nav>
         <a href="#about">About</a>
-        <a href="#packages">Packages</a>
+        <a href="#packages">Content Systems</a>
+        <a href="#crm">CRM &amp; Automation</a>
         <a href="#system">Viral Script System</a>
         <a href="#contact">Contact</a>
       </nav>
     </div>
   </header>
 
-  <section class="hero">
+  <section id="top" class="hero">
     <div class="wrap grid">
       <div>
-        <div class="badge">AI • Cinematics • Automation</div>
+        <div class="badge">AI • CRM • Automation</div>
         <h1>Where <span class="glow">AI</span> Meets <span class="glow">Automation</span></h1>
-        <p class="lead">Cinematic universes for creators and brands. We merge prompt engineering, visual direction, and automation to deliver consistent, viral-ready content systems.</p>
+        <p class="lead">
+          AI-powered systems for coaches, creators, and agencies. Silent Equity designs the CRM, automations, and client portals that quietly run your business in the background—so you can focus on growth, not glue work.
+        </p>
         <div class="buttons">
-          <a class="btn primary" href="#packages">See Packages</a>
-          <a class="btn ghost" href="#system">Get Script System</a>
+          <a class="btn primary" href="#crm">See Systems</a>
+          <a class="btn ghost" href="#contact">Book a Call</a>
         </div>
       </div>
       <div class="panel">
         <h3>What We Build</h3>
         <ul class="bullets">
-          <li>Cinematic short-form series for TikTok / Reels / Shorts</li>
-          <li>Continuity-driven character storytelling</li>
-          <li>AI prompt systems and automation workflows</li>
-          <li>Scalable weekly delivery, pro editing, and direction</li>
+          <li>CRM and pipeline systems in Airtable or your existing stack</li>
+          <li>Client portals for onboarding, delivery, and reporting</li>
+          <li>AI receptionists, lead intake, and follow-up automations</li>
+          <li>End-to-end automation maps for your operations and offers</li>
         </ul>
       </div>
     </div>
@@ -51,16 +54,37 @@
     <div class="wrap grid">
       <div>
         <h2>About Silent Equity</h2>
-        <p>Silent Equity is an AI-first creative studio founded by Tyler Allen. Our philosophy is simple: <em>strategy over stress, automation over burnout, and ownership over everything.</em> We design systems that help creators and brands publish cinematic content at scale — without sacrificing story, style, or speed.</p>
-        <p class="muted">Clients own delivered videos. Silent Equity retains proprietary prompts, templates, and internal workflows unless otherwise licensed.</p>
+        <p>
+          Silent Equity is an AI systems studio founded by Tyler Allen. We design the quiet infrastructure behind high-performing online businesses: clean CRMs, automated workflows, and AI assistants that make every client feel like your only client.
+        </p>
+        <p>
+          Our philosophy is simple:
+          <em>strategy over stress, automation over busywork, and ownership over everything.</em>
+          You keep the relationships and the revenue. We build the engine that scales them.
+        </p>
+        <p class="muted">
+          Whether you’re just getting out of spreadsheets or replacing a broken tech stack, Silent Equity gives you one clear system to run leads, clients, and delivery from end to end.
+        </p>
       </div>
       <div class="panel soft">
         <h3>Core Principles</h3>
         <div class="cols">
-          <div><strong>Precision</strong><span class="muted">Tight prompts, clean visuals, strong hooks.</span></div>
-          <div><strong>Continuity</strong><span class="muted">Consistent character style across episodes.</span></div>
-          <div><strong>Speed</strong><span class="muted">Weekly drops with professional edits.</span></div>
-          <div><strong>Ownership</strong><span class="muted">You own the outputs. We protect the engine.</span></div>
+          <div>
+            <strong>Precision</strong>
+            <span class="muted">Every field, pipeline stage, and automation has a clear job. No clutter.</span>
+          </div>
+          <div>
+            <strong>Continuity</strong>
+            <span class="muted">Leads, calls, invoices, and delivery are connected so nothing slips through the cracks.</span>
+          </div>
+          <div>
+            <strong>Speed</strong>
+            <span class="muted">Fast builds, fast iteration, and responsive support as your business evolves.</span>
+          </div>
+          <div>
+            <strong>Ownership</strong>
+            <span class="muted">You own the stack. We document everything so you’re never locked into a black box.</span>
+          </div>
         </div>
       </div>
     </div>
@@ -68,15 +92,15 @@
 
   <section id="packages" class="packages">
     <div class="wrap">
-      <h2 class="center">Cinematic Packages</h2>
-      <p class="muted center">Pick the system that fits your goals. Upgrade anytime.</p>
+      <h2 class="center">Cinematic Content Systems</h2>
+      <p class="muted center">Locked-in visual identity and content systems for short-form video. Upgrade anytime.</p>
       <div class="cards">
         <div class="card">
           <div class="row space">
             <h3>Basic</h3>
             <div class="price">$1,000</div>
           </div>
-          <p class="muted">One-time starter to lock your style.</p>
+          <p class="muted">One-time starter to lock your style and test performance.</p>
           <ul class="ticks">
             <li>10–12 cinematic clips</li>
             <li>1 trailer</li>
@@ -89,7 +113,7 @@
             <h3>Standard</h3>
             <div class="price">$1,500/mo</div>
           </div>
-          <p class="muted">30-day cinematic series with continuity.</p>
+          <p class="muted">30-day content system with consistent character and pacing.</p>
           <ul class="ticks">
             <li>25–30 videos monthly</li>
             <li>Weekly drops</li>
@@ -102,10 +126,10 @@
             <h3>Premium</h3>
             <div class="price">$1,800/mo</div>
           </div>
-          <p class="muted">Full cinematic universe + priority edits.</p>
+          <p class="muted">Full cinematic universe with direction and priority edits.</p>
           <ul class="ticks">
             <li>30+ videos monthly</li>
-            <li>Story arcs & direction</li>
+            <li>Story arcs &amp; direction</li>
             <li>Trailer + promo polish</li>
           </ul>
           <a class="btn primary block" target="_blank" href="https://buy.stripe.com/fZudR9gI49TN2e16rW18c02">Subscribe — $1,800/mo</a>
@@ -114,6 +138,7 @@
       <p class="fineprint">By purchasing, you agree to the terms in the Silent Equity Business Agreement. Clients own final delivered videos. Silent Equity retains internal systems and prompt IP.</p>
     </div>
   </section>
+
   <section id="crm" class="packages">
     <div class="wrap">
       <h2 class="center">CRM &amp; Automation Systems</h2>
@@ -197,17 +222,17 @@
     </div>
   </section>
 
-           
-
   <section id="system" class="system">
     <div class="wrap grid">
       <div>
-        <h2>The Viral Script System</h2>
-        <p class="muted">Your personal AI filmmaking assistant. Generate Veo3-style scripts, character monologues, scene direction, and continuity with one system. Built for creators who want consistent output without reinventing the wheel.</p>
+        <h2>The Viral Script System (Add-On)</h2>
+        <p class="muted">
+          Your personal AI filmmaking assistant, connected to your systems. Generate Veo3-style scripts, hooks, and scenes without reinventing the wheel—so content keeps flowing while your operations stay organized.
+        </p>
         <ul class="ticks">
           <li>Built-in hooks, timing, and pacing</li>
           <li>Character voice + POV templates</li>
-          <li>Shot structure & scene direction</li>
+          <li>Shot structure &amp; scene direction</li>
         </ul>
         <div class="row gap">
           <a class="btn primary" target="_blank" href="https://buy.stripe.com/3cI4gz2Reea34m93fK18c03">Get System — $20/mo</a>
@@ -228,11 +253,14 @@
   <section id="contact" class="contact">
     <div class="wrap grid">
       <div>
-        <h2>Start Your Project</h2>
-        <p class="muted">Tell us about your character or brand vision. We’ll reply with next steps and availability.</p>
+        <h2>Start Your System Build</h2>
+        <p class="muted">
+          Tell us about your business, current tools, and where things feel messy.
+          We’ll reply with next steps and a short Loom overview of your recommended system.
+        </p>
         <div class="row gap">
           <a class="btn ghost" href="mailto:tytechinvestmentsllc@gmail.com">Email Us</a>
-          <a class="btn" href="#packages">Choose a Package</a>
+          <a class="btn" href="#crm">Choose a System</a>
         </div>
         <p class="fineprint">Prefer not to show a phone number publicly. Business line available upon request.</p>
       </div>
@@ -243,7 +271,7 @@
           <input type="hidden" name="_next" value="thankyou.html">
           <label>Name<input name="Name" required></label>
           <label>Email<input name="Email" type="email" required></label>
-          <label>Project<textarea name="Message" rows="4" placeholder="Character, tone, example links, timeline" required></textarea></label>
+          <label>Project<textarea name="Message" rows="4" placeholder="Current setup, tools you use, bottlenecks, and goals for the next 6–12 months" required></textarea></label>
           <button type="submit" class="btn primary block">Send Inquiry</button>
         </form>
       </div>
@@ -252,11 +280,12 @@
 
   <footer class="foot">
     <div class="wrap row space">
-      <div>© <span id="y"></span> Silent Equity LLC — AI Cinematic Systems</div>
-      <div class="muted">Built for speed, continuity, and scale.</div>
+      <div>© <span id="y"></span> Silent Equity LLC — AI Systems &amp; Automation</div>
+      <div class="muted">Built for precision, continuity, and scale.</div>
     </div>
   </footer>
 
   <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
 </body>
 </html>
+
